--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:okJ0axK52jyZg9xhMOx9is7mrcOM/5d4UdXBBHCYatw=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://centralreal.in:8
 
 LOG_CHANNEL=stack
 
